--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ main {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    max-width: 1200px;
+    max-width: 90vw;
     margin-left: auto;
     margin-right: auto;
     overflow: auto;
@@ -30,7 +30,6 @@ main {
     border-radius: 4px;
     border: none;
     transition: 0.2s;
-    text-transform: uppercase;
     font-weight: 600;
     background-color: #5DD9C1;
     padding-left: 1em;
